# django-template

./: .gitignore  config.toml  logging.ini  pyproject.toml  typing_demo.sublime-project
src/typing_demo/: cli.py  config.py  cup.py  gunicorn.py  lib.py  web.py
src/typing_demo/migrations/: 0001_initial.py
