[build-system]
requires = ["setuptools>=64.0"]
build-backend = "setuptools.build_meta"

[project]
name = "typing-demo"
version = "0.1.0"
dependencies = [
	"django",
	"gunicorn",
	"pydantic",
	"click",
	"toml",
	"django_extensions",
]

[project.optional-dependencies]
dev = ["django-types", "black"]

[tool.pyright]
exclude                = ["**/node_modules", "**/__pycache__"]
include                = ["src"]
typeCheckingMode = "strict"
reportMissingImports   = true
reportMissingTypeStubs = true
reportGeneralTypeIssues = true
reportPrivateImportUsage = "information"
reportUnusedFunction = true
reportUnknownParameterType = true
reportUnknownArgumentType = true
reportUnknownVariableType = true
reportUnknownMemberType = true
reportMissingParameterType = true
reportMissingTypeArgument = true
reportImportCycles = true

pythonPlatform = "Linux"
pythonVersion  = "3.10"

[project.scripts]
typing-demo = "typing_demo.cli:cli"